--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -173,6 +173,7 @@
   <!-- endbuild -->
 
   <!-- JQuery -->
+  {% block scripts %}{% endblock %}
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
   <!-- Bootstrap tooltips -->
@@ -185,6 +186,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.5/js/mdb.min.js"></script>
 
   <script src="../scripts/src/main.js"></script>
+
   <!-- Built with love using Web Starter Kit -->
 </body>
 
