--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -44,7 +44,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.5/css/mdb.min.css" rel="stylesheet">
   <!--Rubik font-->
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
