Preparado para deploy

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -129,8 +129,6 @@ thead tr th {
     font-size: 2.25rem;
 }
 
-.main-content .data {}
-
 table.table a {
     color: #007bff !important;
 }
@@ -342,6 +340,11 @@ table.table td,
 table.table th {
     padding-top: 1rem;
     padding-bottom: 1ren;
+}
+
+.table td,
+.table th {
+    vertical-align: middle;
 }
 
 .btn-circle.btn-xl {
