--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -32,8 +32,8 @@
             <hr>
             <div class="row">
                 <div class="container" style="display: flex; justify-content: space-between;">
-                    <p>20190404_145807.docx</p>
-                    <div class="mx-2">
+                    <p>archivo.docx</p>
+                    <div class="mx-2 float-right text-right">
                         <a href="#">VIEW & EDIT</a>
                         |
                         <a href="#">SHARE</a>
