--- a/resources/views/tickets.twig
+++ b/resources/views/tickets.twig
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Main content Header-->
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
         <div class="index header">
             <h2 class="">Project Request Form</h2>
         </div>
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <div class="col-6">
+    <div class="col-md-6">
         <div class="index header">
             <div>
                 <h2 class="">Order Status</h2>
