--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -44,7 +44,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.5/css/mdb.min.css" rel="stylesheet">
   <!--Rubik font-->
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/thefutures/styles/main.css">
 </head>
 
 <body>
@@ -97,10 +97,10 @@
           <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle w-100">Hi William</a>
           <ul class="dropdown-menu mt-2 rounded-0  border-0 z-depth-1">
             <li class="dropdown-item p-0">
-              <a class="w-100 text-link" href="/thefutures/dashboard/">My Files</a>
+              <a class="w-100 text-link" href="/dashboard/">My Files</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="/thefutures/dashboard/order-history" class="text-link w-100">Order History</a>
+              <a href="/dashboard/order-history" class="text-link w-100">Order History</a>
             </li>
             <li class="dropdown-item p-0">
               <a href="#" class="text-link w-100">Manage Team</a>
@@ -118,22 +118,22 @@
   <main class="container-fluid main-wrapper">
     <div class="row">
       <!--Left_Navbar-->
-      <div id="sidebar" class="col-xl-2 col-md-3 col-4">
+      <div id="sidebar" class="col-xl-2 col-md-3 d-md-block d-none">
         <nav>
           <div class="sidebar-link {% if active == 'myfiles' %} sidebar-active {% endif %}">
-            <a class="text-link " href="/thefutures/dashboard/">My files</a>
+            <a class="text-link " href="/dashboard/">My files</a>
           </div>
           <div class="sidebar-link {% if active == 'order' %} sidebar-active {% endif %}">
-            <a class="text-link " href="/thefutures/dashboard/order-history">Order History</a>
+            <a class="text-link " href="/dashboard/order-history">Order History</a>
           </div>
           <div class="sidebar-link {% if active == 'manage' %} sidebar-active {% endif %}">
-            <a class="text-link" href="/thefutures/dashboard/manage-team">Manage Team</a>
+            <a class="text-link" href="/dashboard/manage-team">Manage Team</a>
           </div>
           <div class="sidebar-link {% if active == 'settings' %} sidebar-active {% endif %}">
-            <a class="text-link" href="/thefutures/dashboard/settings">Settings</a>
+            <a class="text-link" href="/dashboard/settings">Settings</a>
           </div>
           <div class="sidebar-link {% if active == 'tickets' %} sidebar-active {% endif %}">
-            <a class="text-link" href="/thefutures/dashboard/tickets">Tickets</a>
+            <a class="text-link" href="/dashboard/tickets">Tickets</a>
           </div>
           <div class="sidebar-link">
             &nbsp;
@@ -157,8 +157,8 @@
       </div>
       <!--/.Left_Navbar-->
       <!-- Main Content-->
-      <div id="main-content" class="col-xl-10 col-md-9 col-8">
-        <div class="container ">
+      <div id="main-content" class="col-xl-10 col-md-9 col-12">
+        <div class="container-fluid ">
           <div class="main-content">
             {% block content %}{% endblock %}
           </div>
