--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -129,19 +129,21 @@
             </div>
           </div>
           <div class="sidebar-menu">
-            <div class="sidebar-link sidebar-active">
+            <div class="sidebar-link {% if active == "myfiles" %}sidebar-active{% endif %}">
               <a class="text-link " href="/dashboard/">My files</a>
             </div>
             <div class="sidebar-link ">
-              <a class="text-link " href="/dashboard/order-history">Order History</a>
+              <a class="text-link {% if active == "order" %}sidebar-active{% endif %}"
+                href="/dashboard/order-history">Order History</a>
             </div>
-            <div class="sidebar-link ">
+            <div class="sidebar-link {% if active == "manage" %}sidebar-active{% endif %}">
               <a class="text-link" href="/dashboard/manage-team">Manage Team</a>
             </div>
             <div class="sidebar-link ">
-              <a class="text-link" href="/dashboard/settings">Settings</a>
+              <a class="text-link {% if active == "settings" %}settings{% endif %}"
+                href="/dashboard/settings">Settings</a>
             </div>
-            <div class="sidebar-link ">
+            <div class="sidebar-link {% if active == "tickets" %}sidebar-active{% endif %}">
               <a class="text-link" href="/dashboard/tickets">Tickets</a>
             </div>
             <div class="sidebar-link">
@@ -167,27 +169,10 @@
           <!-- sidebar-menu  -->
         </div>
         <!-- sidebar-content  -->
-        <div class="sidebar-footer">
-          <a href="#">
-            <i class="fa fa-bell"></i>
-            <span class="badge badge-pill badge-warning notification">3</span>
-          </a>
-          <a href="#">
-            <i class="fa fa-envelope"></i>
-            <span class="badge badge-pill badge-success notification">7</span>
-          </a>
-          <a href="#">
-            <i class="fa fa-cog"></i>
-            <span class="badge-sonar"></span>
-          </a>
-          <a href="#">
-            <i class="fa fa-power-off"></i>
-          </a>
-        </div>
       </nav>
       <!-- sidebar-wrapper  -->
       <main class="page-content">
-        <div class="container-fluid ">
+        <div class="container-fluid mt-0">
           <div class="main-content">
             {% block content %}{% endblock %}
           </div>
