Mejoras en la itegracion del sidebar y estilos generales

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -808,7 +808,7 @@ body {
 .chiller-theme .sidebar-wrapper .sidebar-brand>a,
 .chiller-theme .sidebar-wrapper .sidebar-menu ul li a,
 .chiller-theme .sidebar-footer>a {
-    color: var(--futures-font-color);
+    color: var(--futures-color);
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-menu ul li:hover>a,
