--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -132,9 +132,8 @@
             <div class="sidebar-link {% if active == "myfiles" %}sidebar-active{% endif %}">
               <a class="text-link " href="/dashboard/">My files</a>
             </div>
-            <div class="sidebar-link ">
-              <a class="text-link {% if active == "order" %}sidebar-active{% endif %}"
-                href="/dashboard/order-history">Order History</a>
+            <div class="sidebar-link  {% if active == "order" %}sidebar-active{% endif %}">
+              <a class="text-link" href="/dashboard/order-history">Order History</a>
             </div>
             <div class="sidebar-link {% if active == "manage" %}sidebar-active{% endif %}">
               <a class="text-link" href="/dashboard/manage-team">Manage Team</a>
@@ -172,7 +171,7 @@
       </nav>
       <!-- sidebar-wrapper  -->
       <main class="page-content">
-        <div class="container-fluid mt-0">
+        <div class="container-fluid pt-0">
           <div class="main-content">
             {% block content %}{% endblock %}
           </div>
