--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -171,7 +171,7 @@
       </nav>
       <!-- sidebar-wrapper  -->
       <main class="page-content">
-        <div class="container-fluid pt-0">
+        <div class="container-fluid">
           <div class="main-content">
             {% block content %}{% endblock %}
           </div>
