--- a/resources/views/myFiles2.twig
+++ b/resources/views/myFiles2.twig
@@ -45,7 +45,7 @@
         <tbody>
             <tr>
                 <th scope="row">
-                    <a href="orderDetails/TC1031972989.html">
+                    <a href="/dashboard/order-history/TC1031972989">
                         TC1031972989
                     </a>
                 </th>
@@ -60,7 +60,7 @@
             </tr>
             <tr>
                 <th scope="row">
-                    <a href="orderDetails/TC1031972989.html">
+                    <a href="/dashboard/order-history/TC1031972989">
                         TC0376402980
                     </a>
                 </th>
@@ -75,7 +75,7 @@
             </tr>
             <tr>
                 <th scope="row">
-                    <a href="orderDetails/TC1031972989.html">
+                    <a href="/dashboard/order-history/TC1031972989">
                         TC1031972989
                     </a>
                 </th>
@@ -90,7 +90,7 @@
             </tr>
             <tr>
                 <th scope="row">
-                    <a href="orderDetails/TC1031972989.html">
+                    <a href="/dashboard/order-history/TC1031972989">
                         TC1031972989
                     </a>
                 </th>
@@ -105,7 +105,7 @@
             </tr>
             <tr>
                 <th scope="row">
-                    <a href="orderDetails/TC1031972989.html">
+                    <a href="/dashboard/order-history/TC1031972989">
                         TC1031972989
                     </a>
                 </th>
