--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -1,7 +1,7 @@
 {% extends 'layout2.twig'  %}
 
 {% block content %}
-<div class="header-2" style="margin: 50px 0;">
+<div class="header-2">
     <h1 class="main-title">Order: TC1031972989</h1>
 </div>
 <div>
