--- a/resources/views/tickets.twig
+++ b/resources/views/tickets.twig
@@ -1,10 +1,14 @@
 {% extends 'layout2.twig' %}
+{% block headlinks %}
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.10/css/bootstrap-select.min.css">
+{% endblock %}
 {% block content %}
 <!-- Main content Header-->
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <div class="index header">
-            <h2 class="">Project Request Form</h2>
+            <h1 class="">Project Request Form</h1>
         </div>
         <div>
             <div class="card project-request">
@@ -32,12 +36,13 @@
                     </ul>
                     <hr>
                     <div>
-                        <h5 class="mb-0 font-weight-bold card-title">Tell us about your design</h5>
+                        <h5 class="mb-0 font-weight-bold card-title">1. Tell us about your design</h5>
                         <small class="mt-0 text-muted">Be as detailed as possible.</small>
                     </div>
                     <form action="" class="mt-2">
                         <div class="form-group">
-                            <input class="form-control form-control-sm" type="text" placeholder="Title of request">
+                            <input class="form-control form-control-sm" type="text" placeholder="Title of request"
+                                required>
                         </div>
                         <div class="form-group">
                             <textarea class="form-control form-control-sm rounded-0" id="exampleFormControlTextarea2"
@@ -53,16 +58,98 @@
                             <textarea class="form-control form-control-sm rounded-0" id="exampleFormControlTextarea2"
                                 rows="" placeholder="1."></textarea>
                         </div>
-                        <button class="btn btn-futures">Send Request</button>
+                        <hr>
+                        <div>
+                            <p class="mb-0">Select a design size *</p>
+                            <select class="selectpicker" multiple required>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                                <option value="3">Three</option>
+                            </select>
+                            <div class="d-flex justify-content-between align-items-center my-2">
+                                <p class="my-0 w-50">* This design is for: </p>
+                                <select class="w-50 custom-select custom-select-sm">
+                                    <option selected>Open</option>
+                                    <option value="1">One</option>
+                                    <option value="2">Two</option>
+                                    <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-sm rounded-0" id="exampleFormControlTextarea2"
+                                    rows="" placeholder="Type of audience you are trying to reach. *"></input>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control form-control-sm rounded-0"
+                                    id="exampleFormControlTextarea2" rows="3"
+                                    placeholder="Share any links you would like us to see for inspiration. Just paste them in this box."></textarea>
+                            </div>
+                        </div>
+                        <hr>
+                        <div>
+                            <h5 class="mb-0 font-weight-bold card-title">2. Upload Assets</h5>
+                            <small class="mt-0 text-muted">Upload anything you may want in your design (photos, fonts,
+                                logos, word docs, images, etc).</small>
+
+                            <div class=" my-2">
+                                <div class="custom-file">
+                                    <input type="file" multiple class="custom-file-input" id="inputGroupFile01"
+                                        aria-describedby="inputGroupFileAddon01">
+                                    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                                </div>
+                            </div>
+                            <div>
+                                <small class="">Please make sure that your file upload does not exceed 10MB in
+                                    Total</small>
+                            </div>
+                        </div>
+                        <hr>
+                        <div>
+                            <h5 class="mb-0 font-weight-bold card-title">3. Files Needed</h5>
+                            <small class="mt-0 text-muted">Pick the types of files you want to receive.</small>
+                            <div>
+                                <!-- Default inline 1-->
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="defaultInline1">
+                                    <label class="custom-control-label" for="defaultInline1">PNG</label>
+                                </div>
+
+                                <!-- Default inline 2-->
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="defaultInline2">
+                                    <label class="custom-control-label" for="defaultInline2">JPG</label>
+                                </div>
+
+                                <!-- Default inline 3-->
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="defaultInline3">
+                                    <label class="custom-control-label" for="defaultInline3">PDF</label>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+                                <label class="custom-control-label" for="defaultUnchecked">I confirm I have providad all
+                                    final copy and/or content for this request. I have read and accept the <a
+                                        href="#">Terms of Service</a></label>
+                            </div>
+                        </div>
+                        <hr>
+                        <button class="mx-0 float-right btn btn-futures">Send Request</button>
                     </form>
+
+
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <div class="index header">
             <div>
-                <h2 class="">Order Status</h2>
+                <h1 class="">Order Status</h1>
             </div>
         </div>
         <!--/ Main content Header-->
@@ -81,8 +168,8 @@
             <tbody>
                 <tr>
                     <th scope="row">
-                        <a href="orderDetails/TC1031972989.html">
-                            1
+                        <a href="/dashboard/order-history/TC1031972989">
+                            00001
                         </a>
                     </th>
                     <td>Mark</td>
@@ -93,8 +180,8 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        <a href="orderDetails/TC1031972989.html">
-                            2
+                        <a href="/dashboard/order-history/TC1031972989">
+                            00002
                         </a>
                     </th>
                     <td>Jacob</td>
@@ -105,8 +192,8 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        <a href="orderDetails/TC1031972989.html">
-                            3
+                        <a href="/dashboard/order-history/TC1031972989">
+                            00003
                         </a>
                     </th>
                     <td>Larry the Bird</td>
@@ -117,8 +204,8 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        <a href="orderDetails/TC1031972989.html">
-                            4
+                        <a href="/dashboard/order-history/TC1031972989">
+                            00004
                         </a>
                     </th>
                     <td>Larry the Bird</td>
@@ -129,8 +216,8 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        <a href="orderDetails/TC1031972989.html">
-                            5
+                        <a href="/dashboard/order-history/TC1031972989">
+                            00005
                         </a>
                     </th>
                     <td>Larry the Bird</td>
@@ -146,7 +233,9 @@
 {% endblock %}
 
 
+
 {% block scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.10/js/bootstrap-select.min.js"></script>
 <script>
     $graphicDesing = document.getElementById('graphic');
     $videoEditing = document.getElementById('video');
