Mejoras en los margenes del header

--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -45,6 +45,8 @@
   <!--Rubik font-->
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/thefutures/styles/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/main.css">
   {% block headlinks %}{% endblock %}
 </head>
 
@@ -198,7 +200,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.5/js/mdb.min.js"></script>
   {% block scripts %}{% endblock %}
   <script src="/thefutures/scripts/main.js"></script>
-
+  <script src="/scripts/main.js"></script>
   <!-- Built with love using Web Starter Kit -->
 </body>
 
