--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -70,7 +70,7 @@
           <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle w-100">Services</a>
           <ul class="dropdown-menu mt-2 rounded-0  border-0 z-depth-1">
             <li class="dropdown-item p-0">
-              <a class="w-100 text-link" href="#">My Files</a>
+              <a class="w-100 text-link active" href="#">My Files</a>
             </li>
             <li class="dropdown-item p-0">
               <a href="#" class="text-link w-100">Order History</a>
