--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -131,21 +131,36 @@
               <i class="fas fa-arrow-left"></i>
             </div>
           </div>
-          <div class="sidebar-menu">
+          <div class="sidebar-menu pt-2">
             <div class="sidebar-link {% if active == "myfiles" %}sidebar-active{% endif %}">
-              <a class="text-link " href="/thefutures/dashboard/">My files</a>
+              <div class="pt-2">
+                <a class="text-link {% if active == "myfiles" %}active{% endif %}" href="/thefutures/dashboard/">My
+                  files</a>
+              </div>
             </div>
             <div class="sidebar-link  {% if active == "order" %}sidebar-active{% endif %}">
-              <a class="text-link" href="/thefutures/dashboard/order-history">Order History</a>
+              <div class="pt-2">
+                <a class="text-link {% if active == "order" %}active{% endif %}"
+                  href="/thefutures/dashboard/order-history">Order History</a>
+              </div>
             </div>
             <div class="sidebar-link {% if active == "manage" %}sidebar-active{% endif %}">
-              <a class="text-link" href="/thefutures/dashboard/manage-team">Manage Team</a>
+              <div class="pt-2">
+                <a class="text-link {% if active == "manage" %}active{% endif %}"
+                  href="/thefutures/dashboard/manage-team">Manage Team</a>
+              </div>
             </div>
             <div class="sidebar-link {% if active == "settings" %}sidebar-active{% endif %}">
-              <a class="text-link" href="/thefutures/dashboard/settings">Settings</a>
+              <div class="pt-2">
+                <a class="text-link {% if active == "settings" %}active{% endif %}"
+                  href="/thefutures/dashboard/settings">Settings</a>
+              </div>
             </div>
             <div class="sidebar-link {% if active == "tickets" %}sidebar-active{% endif %}">
-              <a class="text-link" href="/thefutures/dashboard/tickets">Tickets</a>
+              <div class="pt-2">
+                <a class="text-link {% if active == "tickets" %}active{% endif %}"
+                  href="/thefutures/dashboard/tickets">Tickets</a>
+              </div>
             </div>
             <div class="sidebar-link">
               &nbsp;
