--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -86,11 +86,16 @@ body {
     font-size: 16px;
     padding: 0;
     font-weight: 700 !important;
+    transition: .4s;
+    border-right: 2px solid white;
 }
 
 .sidebar-link:hover {
     font-weight: 700 !important;
     border-right: 2px solid #f91c52;
+    transition: .4s;
+    transition-timing-function: ease-in-out;
+
 }
 
 .sidebar-active {
