--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -86,15 +86,15 @@ body {
     font-size: 16px;
     padding: 0;
     font-weight: 700 !important;
-    transition: .4s;
+    transition: .5s;
     border-right: 2px solid white;
 }
 
 .sidebar-link:hover {
     font-weight: 700 !important;
     border-right: 2px solid #f91c52;
-    transition: .4s;
-    transition-timing-function: ease-in-out;
+
+    transition-timing-function: ease-in;
 
 }
 
