--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -67,19 +67,19 @@
       <!-- Links -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
-          <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle w-100">Services</a>
+          <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle ">Services</a>
           <ul class="dropdown-menu mt-2 rounded-0  border-0 z-depth-1">
             <li class="dropdown-item p-0">
-              <a class="w-100 text-link active" href="#">My Files</a>
+              <a class=" text-link active" href="#">My Files</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="#" class="text-link w-100">Order History</a>
+              <a href="#" class="text-link ">Order History</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="#" class="text-link w-100">Manage Team</a>
+              <a href="#" class="text-link ">Manage Team</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="#" class="text-link w-100">Settings</a>
+              <a href="#" class="text-link ">Settings</a>
             </li>
           </ul>
         </li>
@@ -97,19 +97,19 @@
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
-          <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle w-100">Hi William</a>
+          <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle ">Hi William</a>
           <ul class="dropdown-menu mt-2 rounded-0  border-0 z-depth-1">
             <li class="dropdown-item p-0">
-              <a class="w-100 text-link" href="/thefutures/dashboard/">My Files</a>
+              <a class=" text-link" href="/thefutures/dashboard/">My Files</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="/thefutures/dashboard/order-history" class="text-link w-100">Order History</a>
+              <a href="/thefutures/dashboard/order-history" class="text-link ">Order History</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="#" class="text-link w-100">Manage Team</a>
+              <a href="#" class="text-link ">Manage Team</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="#" class="text-link w-100">Settings</a>
+              <a href="#" class="text-link ">Settings</a>
             </li>
           </ul>
         </li>
@@ -166,19 +166,25 @@
               &nbsp;
             </div>
             <div class="sidebar-link">
-              <a class="text-link" class="text-link" href="#">
-                Make a Payment
-              </a>
+              <div class="pt-2">
+                <a class="text-link" class="text-link" href="#">
+                  Make a Payment
+                </a>
+              </div>
             </div>
             <div class="sidebar-link">
-              <a class="text-link" class="text-link" href="#">
-                Transaction History
-              </a>
+              <div class="pt-2">
+                <a class="text-link" class="text-link" href="#">
+                  Transaction History
+                </a>
+              </div>
             </div>
             <div class="sidebar-link">
-              <a class="text-link" class="text-link" href="#">
-                Billing Settings
-              </a>
+              <div class="pt-2">
+                <a class="text-link" class="text-link" href="#">
+                  Billing Settings
+                </a>
+              </div>
             </div>
 
           </div>
