--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -57,6 +57,15 @@ body {
     padding-right: 1rem;
 }
 
+.navbar-nav .nav-item a {
+    border-bottom: 1px solid white;
+}
+
+.navbar-nav .nav-item a:hover {
+    border-bottom: 2px solid var(--futures-color);
+    color: black !important;
+}
+
 .navbar .dropdown-menu a {
     padding: .5rem;
 }
@@ -66,8 +75,8 @@ body {
 }
 
 .navbar
-/*---------------- /Estilos navs y navbars --------------*/
-/* Estilos sidebar */
+/*---------------- ///Estilos navs y navbars --------------*/
+/*------------------ Estilos sidebar ----------------------*/
 
 #sidebar {
     background-color: #f6f9fa;
@@ -86,21 +95,19 @@ body {
     font-size: 16px;
     padding: 0;
     font-weight: 700 !important;
-    transition: .5s;
     border-right: 2px solid white;
 }
 
 .sidebar-link:hover {
     font-weight: 700 !important;
     border-right: 2px solid #f91c52;
-
-    transition-timing-function: ease-in;
-
+    color: black;
 }
 
 .sidebar-active {
     font-weight: 700 !important;
     color: var(--futures-color) !important;
+
 }
 
 .navbar .navbar-brand {
