--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -50,7 +50,7 @@ body {
 }
 
 .text-link {
-    padding: 1rem 0 1rem 1rem !important;
+    padding-left: 1rem !important;
 }
 
 .navbar-nav {
@@ -58,11 +58,19 @@ body {
 }
 
 .navbar-nav .nav-item .nav-link {
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid white;
+}
+
+.navbar-nav .nav-item .nav-link {
+    margin: 0 !important;
+    padding: 1.1rem;
 }
 
 .navbar-nav .nav-item .nav-link:hover {
     border-bottom: 2px solid var(--futures-color);
+}
+
+.navbar-nav .nav-item .nav-link:hover {
     color: black !important;
 }
 
@@ -76,7 +84,6 @@ body {
     color: var(--futures-color) !important;
 }
 
-.navbar
 /*---------------- ///Estilos navs y navbars --------------*/
 /*------------------ Estilos sidebar ----------------------*/
 
@@ -501,7 +508,7 @@ body {
     height: 100%;
     max-height: 100%;
     position: absolute;
-    top: 66px;
+    top: 67px;
     left: -300px;
     z-index: 999;
 }
