--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -126,12 +126,12 @@
       <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
           <div class="sidebar-brand">
-            <a href="#">Hi William</a>
+            <a href="#">&nbsp</a>
             <div id="close-sidebar">
               <i class="fas fa-arrow-left"></i>
             </div>
           </div>
-          <div class="sidebar-menu pt-2">
+          <div class="sidebar-menu">
             <div class="sidebar-link {% if active == "myfiles" %}sidebar-active{% endif %}">
               <div class="pt-2">
                 <a class="text-link {% if active == "myfiles" %}active{% endif %}" href="/thefutures/dashboard/">My
