--- a/resources/views/tickets.twig
+++ b/resources/views/tickets.twig
@@ -6,7 +6,7 @@
 {% block content %}
 <!-- Main content Header-->
 <div class="row">
-    <div class="col-lg-6">
+    <div class="col">
         <div class="index header">
             <h1 class="">Project Request Form</h1>
         </div>
@@ -145,89 +145,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="index header">
-            <div>
-                <h1 class="">Order Status</h1>
-            </div>
-        </div>
-        <!--/ Main content Header-->
-        <!-- Main content Data Display-->
-        <table id="" cellspacing="0" class="table tickets-table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Project Name</th>
-                    <th scope="col">Received</th>
-                    <th scope="col">In Production</th>
-                    <th scope="col">In review</th>
-                    <th scope="col">Delivered</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">
-                        <a href="/thefutures/dashboard/order-history/TC1031972989">
-                            00001
-                        </a>
-                    </th>
-                    <td>Mark</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <a href="/dashboard/order-history/TC1031972989">
-                            00002
-                        </a>
-                    </th>
-                    <td>Jacob</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <a href="/dashboard/order-history/TC1031972989">
-                            00003
-                        </a>
-                    </th>
-                    <td>Larry the Bird</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <a href="/dashboard/order-history/TC1031972989">
-                            00004
-                        </a>
-                    </th>
-                    <td>Larry the Bird</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <a href="/thefutures/dashboard/order-history/TC1031972989">
-                            00005
-                        </a>
-                    </th>
-                    <td>Larry the Bird</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                </tr>
-            </tbody>
-        </table>
     </div>
 </div>
 {% endblock %}
