--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -135,19 +135,25 @@
             <div class="sidebar-link {% if active == "tickets" %}sidebar-active{% endif %}">
               <div class="pt-2">
                 <a class="text-link {% if active == "tickets" %}active{% endif %}"
-                  href="/thefutures/dashboard/tickets">Tickets</a>
+                  href="/thefutures/dashboard/tickets">Place a Request</a>
+              </div>
+            </div>
+            <div class="sidebar-link {% if active == "status" %}sidebar-active{% endif %}">
+              <div class="pt-2">
+                <a class="text-link {% if active == "satus" %}active{% endif %}"
+                  href="/thefutures/dashboard/projects-status">Projects Status</a>
+              </div>
+            </div>
+            <div class="sidebar-link  {% if active == "order" %}sidebar-active{% endif %}">
+              <div class="pt-2">
+                <a class="text-link {% if active == "order" %}active{% endif %}"
+                  href="/thefutures/dashboard/order-history">Projects History</a>
               </div>
             </div>
             <div class="sidebar-link {% if active == "myfiles" %}sidebar-active{% endif %}">
               <div class="pt-2">
                 <a class="text-link {% if active == "myfiles" %}active{% endif %}" href="/thefutures/dashboard/">My
                   files</a>
-              </div>
-            </div>
-            <div class="sidebar-link  {% if active == "order" %}sidebar-active{% endif %}">
-              <div class="pt-2">
-                <a class="text-link {% if active == "order" %}active{% endif %}"
-                  href="/thefutures/dashboard/order-history">Order History</a>
               </div>
             </div>
             <div class="sidebar-link {% if active == "manage" %}sidebar-active{% endif %}">
