--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -141,19 +141,13 @@
             <div class="sidebar-link {% if active == "status" %}sidebar-active{% endif %}">
               <div class="pt-2">
                 <a class="text-link {% if active == "satus" %}active{% endif %}"
-                  href="/thefutures/dashboard/projects-status">Projects Status</a>
+                  href="/thefutures/dashboard/projects-status">Project Status</a>
               </div>
             </div>
             <div class="sidebar-link  {% if active == "order" %}sidebar-active{% endif %}">
               <div class="pt-2">
                 <a class="text-link {% if active == "order" %}active{% endif %}"
-                  href="/thefutures/dashboard/order-history">Projects History</a>
-              </div>
-            </div>
-            <div class="sidebar-link {% if active == "myfiles" %}sidebar-active{% endif %}">
-              <div class="pt-2">
-                <a class="text-link {% if active == "myfiles" %}active{% endif %}" href="/thefutures/dashboard/">My
-                  files</a>
+                  href="/thefutures/dashboard/order-history">Project History</a>
               </div>
             </div>
             <div class="sidebar-link {% if active == "manage" %}sidebar-active{% endif %}">
@@ -162,21 +156,13 @@
                   href="/thefutures/dashboard/manage-team">Manage Team</a>
               </div>
             </div>
+            <div class="sidebar-link">
+              &nbsp;
+            </div>
             <div class="sidebar-link {% if active == "settings" %}sidebar-active{% endif %}">
               <div class="pt-2">
                 <a class="text-link {% if active == "settings" %}active{% endif %}"
                   href="/thefutures/dashboard/settings">Settings</a>
-              </div>
-            </div>
-
-            <div class="sidebar-link">
-              &nbsp;
-            </div>
-            <div class="sidebar-link">
-              <div class="pt-2">
-                <a class="text-link" class="text-link" href="#">
-                  Make a Payment
-                </a>
               </div>
             </div>
             <div class="sidebar-link">
