--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -159,7 +159,7 @@
             <div class="sidebar-link {% if active == "settings" %}sidebar-active{% endif %}">
               <div class="pt-2">
                 <a class="text-link {% if active == "settings" %}active{% endif %}"
-                  href="/thefutures/dashboard/settings">Settings</a>
+                  href="/thefutures/dashboard/settings">Account Settings</a>
               </div>
             </div>
             <div class="sidebar-link">
